--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
            url('./fonts/Roboto-Light.ttf')  format('truetype'), /* Safari, Android, iOS */
            url('./fonts/Roboto-Light.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
-body {margin:0;}
+body {
+    margin:0;
+}
 
 .navbar {
     position: fixed;
@@ -23,6 +25,7 @@ ul.nav {
     overflow: hidden;
     background-color: #FFF;
     margin: 0;
+    padding: 0 10%;
     position: relative;
     vertical-align: middle;
     text-align: center;
@@ -42,22 +45,21 @@ ul.nav li a {
     vertical-align: middle;
     padding: 20px 20px;
     text-decoration: none;
-    margin: 0;
-    line-height: 300%;
-    font-family: Roboto-Light; 
+    line-height: 400%;
+    font-family: Roboto-Bold;
+    font-size: 1.2em;
 }
 
-ul.nav li a:hover:not(.active) {border-top: 2px solid #5aabce; padding-top: 18px;}
+ul.nav li a:hover:not(.active) {border-top: 3px solid #5aabce; padding-top: 17px;}
 
-ul.nav li a.active {border-top: 2px solid #5aabce; padding-top: 18px;}
+ul.nav li a.active {border-top: 3px solid #5aabce; padding-top: 17px;}
 
 ul.nav li.right {float: right;}
 
 #logo {
     display: inline-block;
-    max-height: 40px;
+    max-height: 60px;
     float: left;
-    padding: 0px 10px;
     margin: 0;
 }
 
@@ -73,33 +75,66 @@ ul.nav li.right {float: right;}
     font-family: Roboto-light;
 }
 
+a.anchor {
+    display: block;
+    position: relative;
+    top: -170px;
+    visibility: hidden;
+}
+
 .intro {
     margin-bottom: 5px;
+    position: relative;
+}
+
+.bienvenu {
+    position: absolute;
+    z-index: 3;
+    display: block;
+    top: 30%;
+    left: 10%;
+}
+
+.bienvenu p {
+    padding: 0px 0px 20px 0px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.bienvenu a {
+    background-color: aqua;
+    padding: 10px;
+    color: white;
 }
 
 .slideshow-container {
     width: 100%;
-    display: block;
-    height: auto;
     padding: 0px 0px 0px 0px;
 }
 
-.slideshow-container img{
-    display: block;
+.mySlides {
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow: hidden;
+    
+}
+
+#grad1 {
+    height: 80px;
+    background-color: rgb(200,200,200); /* For browsers that do not support gradients */
+    background-image: linear-gradient(rgb(250,250,250), rgb(230,230,230)); /* Standard syntax (must be last) */
 }
 
 .prev,
 .next {
   cursor: pointer;
   position: absolute;
-  top: 40%;
+  top: 45%;
   width: auto;
-  padding: 16px -20px;
+  padding: 0 10px;
   color: white;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 25px;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
@@ -119,7 +154,7 @@ ul.nav li.right {float: right;}
 
 .line svg {
     stroke-width: 2;
-    stroke:rgb(155,150,150,0.7);
+    stroke:rgb(155,150,150);
     width: 100%;
     margin: 0;
 }
@@ -229,8 +264,59 @@ ul.nav li.right {float: right;}
   transition: .5s ease;
 }
 
-.flexrow {
+.flex-container .flexrow {
+    width: 40%;
+    padding: 0.5%;;
+}
+.flexrow #cube, #pie, #curve {
     position: relative;
+
+    padding: 7% 5%;
+    top: 17%;
+    max-height: 0%;
+}
+
+#pie img {
+    display: inline;
+    width: 15%;
+    vertical-align: middle;
+    color: rgb(59, 189, 229)
+}
+
+#pie p {
+    display: inline-block;
+    width: 80%;
+    vertical-align: middle;
+    padding-left: 5%;
+}
+
+#curve img {
+    display: inline;
+    width: 15%;
+    vertical-align: middle;
+    color: rgb(59, 189, 229);
+}
+
+
+#curve p {
+    display: inline-block;
+    width: 80%;
+    vertical-align: middle;
+    padding-left: 5%;
+}
+
+#cube img {
+    display: inline;
+    width: 15%;
+    vertical-align: middle;
+    color: rgb(59, 189, 229);
+}
+
+#cube p {
+    display: inline-block;
+    width: 80%;
+    vertical-align: middle;
+    padding-left: 5%;
 }
 
 .image {
