--- a/style.css
+++ b/style.css
@@ -1,12 +1,82 @@
 @font-face {
     font-family: 'Roboto-Light';
       src: url('./fonts/Roboto-Light.eot'); /* IE9 Compat Modes */
-      src: url('./fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+      src: url('./fonts/Roboto-Light.eot?#iefix')              format('embedded-opentype'), /* IE6-IE8 */
            url('./fonts/Roboto-Light.woff2') format('woff2'), /* Super Modern Browsers */
            url('./fonts/Roboto-Light.woff') format('woff'), /* Pretty Modern Browsers */
            url('./fonts/Roboto-Light.ttf')  format('truetype'), /* Safari, Android, iOS */
            url('./fonts/Roboto-Light.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
+
+@font-face {
+    font-family: 'Roboto-Black';
+      src: url('./fonts/Roboto-Black.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/Roboto-Black.eot?#iefix')              format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/Roboto-Black.woff2') format('woff2'), /* Super Modern Browsers */
+           url('./fonts/Roboto-Black.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/Roboto-Black.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/Roboto-Black.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'Roboto-Thin';
+      src: url('./fonts/Roboto-Thin.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/Roboto-Thin.eot?#iefix')              format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/Roboto-Thin.woff2') format('woff2'), /* Super Modern Browsers */
+           url('./fonts/Roboto-Thin.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/Roboto-Thin.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/Roboto-Thin.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'Roboto-Bold';
+      src: url('./fonts/Roboto-Blod.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/Roboto-Bold.eot?#iefix')                format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/Roboto-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+           url('./fonts/Roboto-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/Roboto-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/Roboto-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'fontawesome-webfont';
+      src: url('./fonts/fontawesome-webfont.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/fontawesome-webfont.eot?#iefix')        format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/fontawesome-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/fontawesome-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/fontawesome-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'glyphicons-halflings-regular';
+        src: url('./fonts/glyphicons-halflings-regular.eot'); /* IE9 Compat Modes */
+        src: url('./fonts/glyphicons-halflings regular.eot?#iefix')
+           format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/glyphicons-halflings-regular.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/glyphicons-halflings-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/glyphicons-halflings-regular.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'Roboto-Medium';
+      src: url('./fonts/Roboto-Medium.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/Roboto-Medium.eot?#iefix')              format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/Roboto-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+           url('./fonts/Roboto-Medium.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/Roboto-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/Roboto-Medium.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'Roboto-Regular';
+      src: url('./fonts/Roboto-Regular.eot'); /* IE9 Compat Modes */
+      src: url('./fonts/Roboto-Regular.eot?#iefix')            format('embedded-opentype'), /* IE6-IE8 */
+           url('./fonts/Roboto-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+           url('./fonts/Roboto-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+           url('./fonts/Roboto-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+           url('./fonts/Roboto-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
 body {
     margin:0;
 }
@@ -40,19 +110,19 @@ ul.nav li {
 ul.nav li a {
     position: relative;
     display: inline-block;
-    color: black;
+    color: #7F7F7F;
     text-align: center;
     vertical-align: middle;
     padding: 20px 20px;
     text-decoration: none;
     line-height: 400%;
-    font-family: Roboto-Bold;
+    font-family: Roboto-Regular;
     font-size: 1.2em;
 }
 
-ul.nav li a:hover:not(.active) {border-top: 3px solid #5aabce; padding-top: 17px;}
+ul.nav li a:hover:not(.active) {border-top: 3px solid #5aabce; padding-top: 17px;font-family: Roboto-Regular;}
 
-ul.nav li a.active {border-top: 3px solid #5aabce; padding-top: 17px;}
+ul.nav li a.active {border-top: 3px solid #5aabce; padding-top: 17px;color: #0E0E0E;font-family: Roboto-Regular;}
 
 ul.nav li.right {float: right;}
 
@@ -64,77 +134,90 @@ ul.nav li.right {float: right;}
 }
 
 @media screen and (max-width: 600px){
-    ul.nav li.right, 
-    ul.nav li {float: none;}
-    #logo {vertical-align: middle;display: block;margin-left: auto;
-    margin-right: auto;float: none;}
+    ul.nav li.right, ul.nav li {float: none;}
+    #logo {display: inline-block;max-height: 3vh;}
+    ul.nav li a {line-height: 0.5vh;}
 }
 
 .main {
-    margin: 70px 0px 10px 0px;
+    margin: 0px 0px 10px 0px;
     font-family: Roboto-light;
+}
+
+@media screen and (max-width: 600px){
+    .main {position:relative;
+            top:40vh;}
 }
 
 a.anchor {
     display: block;
     position: relative;
-    top: -170px;
+    top: -120px;
     visibility: hidden;
 }
 
-.intro {
-    margin-bottom: 5px;
-    position: relative;
-}
-
-.bienvenu {
-    position: absolute;
-    z-index: 3;
-    display: block;
-    top: 30%;
-    left: 10%;
-}
-
-.bienvenu p {
-    padding: 0px 0px 20px 0px;
-    margin-bottom: 10px;
-    color: white;
-}
-
-.bienvenu a {
-    background-color: aqua;
-    padding: 10px;
-    color: white;
+#wa {
+    color: #45AED6;
 }
 
 .slideshow-container {
-    width: 100%;
+    background: url("./images/slider/bg1.jpg") ; 
+    height: 670px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+}
+
+.intro {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    color: white;
     padding: 0px 0px 0px 0px;
 }
 
-.mySlides {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
+.intro h1 {
+    color: white;
+    font-family: Roboto-Bold;
+    line-height: 1em;
 }
 
-#grad1 {
-    height: 80px;
-    background-color: rgb(200,200,200); /* For browsers that do not support gradients */
-    background-image: linear-gradient(rgb(250,250,250), rgb(230,230,230)); /* Standard syntax (must be last) */
+.intro p {
+    padding-bottom: 0.7em;
+    font-size: 0.9em;
+    line-height: 0.2em;
+    font-family: Roboto-Regular;
+}
+
+.intro a {
+    background-color: #45AED6;
+    line-height: 2.3em;
+    width: 7.3em;
+    text-align: center;
+    color: white;
+    float: left;
+    font-family: Roboto-Medium;
+    font-size: 1.1em;
+    border-radius: 0.2em;
+    text-decoration: none;
+    border-bottom: 0.2em solid #2995BE;
+}
+
+@media screen and (max-width: 600px) {
+    .slideshow-container {display: none; z-index: -3;}
 }
 
 .prev,
 .next {
   cursor: pointer;
   position: absolute;
-  top: 45%;
+  top: 50%;
   width: auto;
   padding: 0 10px;
   color: white;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
@@ -152,20 +235,11 @@ a.anchor {
 }
 
 
-.line svg {
-    stroke-width: 2;
-    stroke:rgb(155,150,150);
-    width: 100%;
-    margin: 0;
-}
 
-.container {
-    margin: 3% 0%;
-}
-
-.container p{
+.headlines p{
     padding: 0 30%;
     text-align: justify;
+    color: #676C71;
     font-family: Roboto-Light;
     font-size: 0.9em;
     text-align: center;
@@ -174,6 +248,24 @@ a.anchor {
 
 .headlines {
     text-align: center;
+}
+
+.headlines h1{
+    padding: 0;
+    margin: 0;
+    font-family: Roboto-Bold;
+    font-size: 2.8em;
+}
+
+svg line {
+    stroke:rgb(200,200,200);
+    stroke-width:0.05em;
+}
+
+svg  circle {
+    stroke:white;
+    stroke-width:5;
+    fill:#45AED6;
 }
 
 .btncont {
@@ -185,24 +277,54 @@ a.anchor {
     vertical-align: middle;
 }
 
-.btncont button {
+.btncont a {
     background-color: rgb(210,210,210);
-    height: 50%;
+    line-height: 3em;
     width: 100%;
-    margin: 25px auto;
+    margin: 50px auto;
     display: inline-block;
     overflow: hidden;
     text-align: center;
-    font-size: 10pt;
+    font-size: 1em;
+    text-decoration: none;
+    font-family: Roboto-Medium;
+    color: rgb(126,126,126);
 }
 
-.filter:hover {
+.btncont a:hover {
     background-color: #5aabce;
 }
 
-.filter:focus {
+.btncont a:focus {
     background-color: #5aabce;
     outline: none;
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .btncont {
+    margin-top: 1vh;
+    width: 100%;
+    margin-left: 30%;
+    margin-right:30%;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    vertical-align: middle;}
+    
+    .btncont a {
+    background-color: rgb(210,210,210);
+    line-height: 5vh;
+    width: 100%;
+    margin: 0px auto;
+    display: inline-block;
+    overflow: hidden;
+    text-align: center;
+    font-size: 1em;
+    text-decoration: none;
+    font-family: Roboto-Medium;
+    color: rgb(126,126,126);
+}
 }
 
 .projcontainer {
@@ -215,8 +337,11 @@ a.anchor {
     display: block;
 }
 
-.pres svg{
-    margin: -30px;
+.pres h1 {
+    padding: 0;
+    margin: 0;
+    font-family: Roboto-Bold;
+    font-size: 2.8em;
 }
 
 .pres p {
@@ -226,14 +351,41 @@ a.anchor {
 }
 
 
-.flex-container {
-    margin: 3% 0%;
+#flex-container {
+    margin: 5% 10% 0%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
 }
 
+.flex-row img {
+    width: 100%;
+    height: auto;
+}
+
+.flex-row p {
+    width: 100%;
+    height: auto;
+    
+}
+
+@media screen and (max-width: 600px){
+
+    .flex-row {
+        position: relative;
+        width: 100%;}
+
+    .flex-row img {
+        width: 100%;
+        height: auto;
+        text-align: center;}
+
+    .flex-row p {
+        width: 100%;
+        height: auto;
+        text-align: center;}
+}
 
 .projcontainer {
     display: flex;
@@ -247,9 +399,16 @@ a.anchor {
 }
 
 .gal {
-    height: 250px;
-    overflow: scroll;
-    padding: 2% 5%;
+    padding: 0vh 5vw 0vh 1vw;
+}
+
+.flexrow {
+    position: relative;
+}
+
+.flexrow img {
+    width: 100%;
+    height: auto;
 }
 
 .overlay {
@@ -262,70 +421,6 @@ a.anchor {
   width: 100%;
   height: 0;
   transition: .5s ease;
-}
-
-.flex-container .flexrow {
-    width: 40%;
-    padding: 0.5%;;
-}
-.flexrow #cube, #pie, #curve {
-    position: relative;
-
-    padding: 7% 5%;
-    top: 17%;
-    max-height: 0%;
-}
-
-#pie img {
-    display: inline;
-    width: 15%;
-    vertical-align: middle;
-    color: rgb(59, 189, 229)
-}
-
-#pie p {
-    display: inline-block;
-    width: 80%;
-    vertical-align: middle;
-    padding-left: 5%;
-}
-
-#curve img {
-    display: inline;
-    width: 15%;
-    vertical-align: middle;
-    color: rgb(59, 189, 229);
-}
-
-
-#curve p {
-    display: inline-block;
-    width: 80%;
-    vertical-align: middle;
-    padding-left: 5%;
-}
-
-#cube img {
-    display: inline;
-    width: 15%;
-    vertical-align: middle;
-    color: rgb(59, 189, 229);
-}
-
-#cube p {
-    display: inline-block;
-    width: 80%;
-    vertical-align: middle;
-    padding-left: 5%;
-}
-
-.image {
-  width: 100%;
-  height: auto;
-}
-
-.flexrow:hover .overlay {
-  height: 60%;
 }
 
 .text {
@@ -341,10 +436,8 @@ a.anchor {
 }
 
 
-
-div.flexrow img {
-    width: 100%;
-    height: auto;
+.flexrow:hover .overlay {
+  height: 60%;
 }
 
 * {
@@ -352,7 +445,7 @@ div.flexrow img {
 }
 
 .responsive {
-    padding: 0 6px;
+    padding: 1em 1em;
     float: left;
     width: 24.99999%;
 }
@@ -376,67 +469,86 @@ div.flexrow img {
     clear: both;
 }
 
-.footcontainer {
-    width: 100%;
-    height: 400px;
+.Map {
     position: relative;
-    border: none;
-    z-index: 0;
+    width: 100vw;
+    height: 650px;
+    border-color: #900;
+    opacity: 0.7;
 }
 
-.footcontainer iframe {
-    width: 100%;
+.Map iframe {
     height: 100%;
-    z-index: 1;
-    position: absolute;
+    width: 100%;
 }
 
-.contact form {
-    border: none;
-    background-color: rgba(220, 220, 220,0.8);
+.Form   {
     position: absolute;
-    z-index: 2;
-    top: 50%;
-    right: 5%;
-    width: 20%;
     height: 80%;
-    padding: 10px 10px;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    width: 25%;
+    left: 65%;
+    vertical-align: middle;
+    background-color: #EFF5F7;
+    border-color: #696;
+    opacity: 0.8;
 }
 
-.contact legend {
-    height: 15%;
-    margin: 10px 0px;
+#map {
+  width: 100vw;
+
+}
+
+#formm {
+  top: 10%;
+}
+
+.Form legend {
+    line-height: 1.1em;
     display: inline-block;
 }
 
-.contact legend h3, p {
-    height: 8%;
+#comp {
+    font-family: Roboto-Bold;
+    color: black;
+    font-size: 1em;
+}
+
+.Form legend h3 {
+    font-family: Roboto-Bold;
     text-align: justify;
-    font-size: 0.7em;
+    font-size: 1.5em;
+    color: rgba(0,0,0);
+    margin-left: 5%;
 }
 
-.contact input[type=text], input[type=email], select {
-    width: 100%;
-    padding: 2px 10px;
-    margin: 6px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+.Form legend p {
+    height: 8%;
+    font-size: 1em;
+    margin-left: 5%;
+    font-family: Roboto-Medium;
 }
 
-.contact textarea {
-    resize: vertical;
+.Form input[type=text], input[type=email], select {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    line-height: 2em;
+    padding-left: 0.5em;
     border: 1px solid #ccc;
-    width: 100%;
-    margin: 6px 0;
-    padding: 2px 10px;
     border-radius: 4px;
-    display: inline-block;
-    box-sizing: border-box;
-    height: 35%;
+    background-color: white;
+}
+
+.Form textarea {
+    border: 1px solid #ccc;
+    background-color: white;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    border-radius: 4px;
+    padding-left: 0.5em;
 }
 
 #btn:hover {
@@ -444,9 +556,11 @@ div.flexrow img {
 }
 
 #btn {
-    padding: 5px;
-    margin: 0px 0px;
-    background-color: rgb(59, 189, 229);
+    padding: 0.6em 1em;
+    font-size: 0.8em;
+    margin-left: 5%;
+    margin-top: 5%;
+    background-color: #45AED6;
     color: white;
     border: none;
     border-radius: 4px;
@@ -454,16 +568,110 @@ div.flexrow img {
     float: left;
 }
 
-/* Clear floats after the columns */
-.col:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 @media screen and (max-width: 600px) {
-    .col input[type=submit] {
-        width: 100%;
-        margin-top: 0;
-    }
+
+
+.Map iframe {
+    height: 100%;
+    width: 100%;
+}
+
+
+#map {
+    position: relative;
+    width: 100vw;
+    height:400px;
+    border-color: #900;
+    opacity: 0.7;
+}
+
+
+.Form   {
+    position: absolute;
+    height: 80%;
+    width: 25%;
+    left: 65%;
+    vertical-align: middle;
+    background-color: #EFF5F7;
+    border-color: #696;
+    opacity: 0.8;
+    overflow:;
+}
+
+#map {
+  width: 100vw;
+
+}
+
+.formm {
+  top: 10%;
+}
+
+.Form legend {
+    font-size: 0.6em;
+    display: inline-block;
+}
+
+#comp {
+    font-family: Roboto-Bold;
+    color: black;
+    font-size: 1.2em;
+}
+
+.Form legend h3 {
+    font-family: Roboto-Bold;
+    text-align: justify;
+    font-size:1.5em;
+    color: rgba(0,0,0);
+    margin-left: 5%;
+}
+
+.Form legend p {
+    font-size: 1em;
+    margin-left: 5%;
+    font-family: Roboto-Medium;
+}
+
+.Form input[type=text], input[type=email], select {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    line-height: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: white;
+}
+
+.Form textarea {
+    border: 1px solid #ccc;
+    background-color: white;
+    width: 90%;
+    max-height: 15vh;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    border-radius: 4px;
+    padding-left: 0.5em;
+}
+
+#btn:hover {
+    background-color: #007596;
+}
+
+#formm input[type=submit] {
+    background-color: #45AED6;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-sizing: border-box;
+    font-size: 0.7em;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 10% 0px;
+    width: 90%;
+}
+
 }
