--- a/style.css
+++ b/style.css
@@ -72,8 +72,9 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 1% 1%;
+    height: 100%;
 }
 
 .navbar {
@@ -710,14 +711,19 @@ a.act {
 }
 
 .footer {
-    position: relative;
+    margin: 0% auto;
+    padding; 0;
     width:100%;
 }
 
-#carte iframe {
-    width: 100vw;
-    height:90vh;
-    border:0;
+.ggwrap {
+    position: relative;
+}
+
+.carte {
+    margin:0% auto; 
+    width: 100%;
+    height: 660px;
 }
 
 #mapover {
@@ -730,24 +736,21 @@ a.act {
     left: 0px; 
 }
 
-#contact {
+.contact {
     position: absolute;
     right: 10%;
-    top:0;
-    width: 30%;
-    max-height: 90%;
-    overflow: hidden;
-    margin: 2.5% 0%;
+    top:10%;
+    bottom: 10%;
 }
 
-#contact form {
+.contact form {
     background-color: rgba(245,243,242,0.7);
     width: 100%;
     box-sizing: border-box;
     padding: 0 5%;
 }
 
-#contact fieldset {
+.contact fieldset {
     border: none;
     padding: 0%;
     margin:0%;
@@ -760,18 +763,18 @@ a.act {
     font-size:1.1em;
 }
 
-#contact legend {
+.contact legend {
     width:100%;
     padding: 0%;
 }
 
-#contact legend h3 {
+.contact legend h3 {
     font-family: Roboto-Bold;
     font-size: 1.7em;
     margin: 5% 0 3%;
 }
 
-#contact legend p {
+.contact legend p {
     max-height: 10%;
     width: 100%;
     color: #64686D;
@@ -781,7 +784,7 @@ a.act {
     margin: 0%;
 }
 
-#contact input[type=text], input[type=email] {
+.contact input[type=text], input[type=email] {
     width: 100%;
     display: block;
     margin-top: 5%;
@@ -794,7 +797,7 @@ a.act {
     padding: 2% 3%;
 }
 
-#contact textarea {
+.contact textarea {
     border: 1px solid #ccc;
     display: block;
     background-color: white;
@@ -825,24 +828,40 @@ a.act {
 
 @media screen and (max-width: 600px) {
 .footer {
+    margin: 0% auto;
+    padding; 0;
+    width:100%;
+}
+
+.ggwrap {
     position: relative;
-    box-sizing: border-box;
 }
 
 .carte {
-    position: absolute;
-    top:0;
-    left:0;
-    border:0;
-    max-height:400px;
-    width:100%;
+    margin:0% auto; 
+    width: 100%;
+    height: 660px;
 }
-    
+
+#mapover {
+    width  : 100%;
+    height : 100%;
+    background: #98C7F0;
+    position: absolute;
+    opacity: 0.5;/*add this*/
+    top: 0px; 
+    left: 0px; 
+}
+
 iframe {
     border:0;
 }
     
-
+.contact {
+    position: relative;
+    width:100%;
+    right:0%;
+}
     
 .inlin {
     
